# AscendTikNTT

./: CMakeLists.txt  README.md  run.sh
.VSCodeCounter/2024-12-13_20-26-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-12-13_20-28-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Ascend/: run.sh
Ascend/benchmark/: baseline_cpu.cpp
Ascend/include/: head.cpp
Ascend/kernel_meta/: matrix_mul.cce  matrix_mul.json
Ascend/kernel_meta/debug_log_core0/: cosim_log.dump  pv.biu.rd_log.dump  pv.biu.wr_log.dump  pv.cubecore0.reg_log.dump  pv.veccore0.instr_log.dump  pv.veccore0.reg_log.dump  pv.veccore0.rvec_pv.dump  pv.veccore0.ub.rd_log.dump  pv.veccore0.ub.wr_log.dump  pv.veccore0.vreg.wr_log.dump
Ascend/src/: addACL.cpp  addTik.py  main.cpp  matmul_int8.py  matmul_int8_demo.py  mul_tik.py  vec_trans_scatter_test.py
Ascend/test/: Multiplication_karatsuba.py  Multiplication_normal.py
Cuda/: CMakeLists.txt  README.md  run.sh
Cuda/benchmark/: CMakeLists.txt  benchmark.md  combine.cu  merge_time.cu  tensor_0_time.cu  tensor_1_time.cu  tensor_2_time.cu  tensor_3_time.cu  tensor_4_time.cu  tensor_5_time.cu  tensor_6_time.cu  tensor_7_time.cu  tensor_8_time.cu
Cuda/source/: CMakeLists.txt
Cuda/source/common/include/: CMakeLists.txt  common.cuh  modular.cuh  parameters.cuh
Cuda/source/common/lib/: CMakeLists.txt  common.cu  parameters.cu
Cuda/source/merge_ntt/include/: CMakeLists.txt  merge_ntt.cuh  merge_ntt_cpu.cuh
Cuda/source/merge_ntt/lib/: CMakeLists.txt  merge_ntt.cu  merge_ntt_cpu.cu
Cuda/source/tensor_ntt/include/: CMakeLists.txt  tensor_ntt.cuh
Cuda/source/tensor_ntt/lib/: CMakeLists.txt  tensor_0.cu  tensor_1.cu  tensor_2.cu  tensor_3.cu  tensor_4.cu  tensor_5.cu  tensor_6.cu  tensor_7.cu  tensor_8.cu
benchmark/: baseline_cpu.cpp  merge.py
include/: head.h  help.h
kernel_meta/: matmul_sample.cce  matmul_sample.json  ntt.cce  ntt.json  ntt_matrix.cce  ntt_matrix.json  simple_add.cce  simple_add.json  vec_trans_scatter.json
kernel_meta/debug_log_core0/: cosim_log.dump  pv.cubecore0.instr_popped_log.dump  pv.cubecore0.pb.rd_log.dump  pv.veccore0.mte_log.dump  pv.veccore0.vreg.rd_log.dump
python/: ntt.py  ntt_matrix.py
src/: addACL_new.cpp  baseline_cpu.cpp  main.cpp  matmul_int8_demo.py  matmul_tik.py  matmulexample.py  tensor.txt
test/: Multiplication_Barrett.py  Multiplication_Montgomery .py  four-stepNTT.py  test.py
